repology-updater/src/snapshots/repology_updater__ruleset__tests__simple_cases.snap
---
source: repology-updater/src/ruleset.rs
expression: res
---
Ruleset {
    rules: [
        Rule {
            name: [
                "foo",
            ],
            namepat: None,
            ver: [],
            notver: [],
            verpat: None,
            wwwpart: [],
            sourceforge: [],
            summpart: [],
            wwwpat: None,
            ruleset: [],
            noruleset: [],
            category: [],
            categorypat: None,
            maintainer: [],
            vercomps: None,
            verlonger: None,
            vergt: None,
            verge: None,
            verlt: None,
            verle: None,
            vereq: None,
            verne: None,
            relgt: None,
            relge: None,
            rellt: None,
            relle: None,
            releq: None,
            relne: None,
            flag: [],
            noflag: [],
            is_p_is_patch: None,
            hasbranch: None,
            setname: Some(
                "bar",
            ),
            setver: None,
            addflavor: None,
            setflavor: None,
            resetflavors: None,
            setbranch: None,
            setbranchcomps: None,
            remove: None,
            ignore: None,
            devel: None,
            weak_devel: None,
            altver: None,
            altscheme: None,
            vulnerable: None,
            p_is_patch: None,
            any_is_patch: None,
            sink: None,
            outdated: None,
            legacy: None,
            nolegacy: None,
            incorrect: None,
            untrusted: None,
            noscheme: None,
            rolling: None,
            snapshot: None,
            successor: None,
            debianism: None,
            generated: None,
            trace: None,
            addflag: [],
            last: None,
            tolowername: None,
            replaceinname: None,
            warning: None,
            setsubrepo: None,
            maintenance: None,
            disposable: None,
            precious: None,
        },
        Rule {
            name: [
                "foo",
            ],
            namepat: None,
            ver: [],
            notver: [],
            verpat: None,
            wwwpart: [],
            sourceforge: [],
            summpart: [],
            wwwpat: None,
            ruleset: [],
            noruleset: [],
            category: [],
            categorypat: None,
            maintainer: [],
            vercomps: None,
            verlonger: None,
            vergt: None,
            verge: None,
            verlt: None,
            verle: None,
            vereq: None,
            verne: None,
            relgt: None,
            relge: None,
            rellt: None,
            relle: None,
            releq: None,
            relne: None,
            flag: [],
            noflag: [],
            is_p_is_patch: None,
            hasbranch: None,
            setname: Some(
                "bar",
            ),
            setver: None,
            addflavor: None,
            setflavor: None,
            resetflavors: None,
            setbranch: None,
            setbranchcomps: None,
            remove: None,
            ignore: None,
            devel: None,
            weak_devel: None,
            altver: None,
            altscheme: None,
            vulnerable: None,
            p_is_patch: None,
            any_is_patch: None,
            sink: None,
            outdated: None,
            legacy: None,
            nolegacy: None,
            incorrect: None,
            untrusted: None,
            noscheme: None,
            rolling: None,
            snapshot: None,
            successor: None,
            debianism: None,
            generated: None,
            trace: None,
            addflag: [],
            last: None,
            tolowername: None,
            replaceinname: None,
            warning: None,
            setsubrepo: None,
            maintenance: None,
            disposable: None,
            precious: None,
        },
        Rule {
            name: [
                "python:foo",
            ],
            namepat: None,
            ver: [],
            notver: [],
            verpat: None,
            wwwpart: [],
            sourceforge: [],
            summpart: [],
            wwwpat: None,
            ruleset: [],
            noruleset: [],
            category: [],
            categorypat: None,
            maintainer: [],
            vercomps: None,
            verlonger: None,
            vergt: None,
            verge: None,
            verlt: None,
            verle: None,
            vereq: None,
            verne: None,
            relgt: None,
            relge: None,
            rellt: None,
            relle: None,
            releq: None,
            relne: None,
            flag: [],
            noflag: [],
            is_p_is_patch: None,
            hasbranch: None,
            setname: Some(
                "python:bar",
            ),
            setver: None,
            addflavor: None,
            setflavor: None,
            resetflavors: None,
            setbranch: None,
            setbranchcomps: None,
            remove: None,
            ignore: None,
            devel: None,
            weak_devel: None,
            altver: None,
            altscheme: None,
            vulnerable: None,
            p_is_patch: None,
            any_is_patch: None,
            sink: None,
            outdated: None,
            legacy: None,
            nolegacy: None,
            incorrect: None,
            untrusted: None,
            noscheme: None,
            rolling: None,
            snapshot: None,
            successor: None,
            debianism: None,
            generated: None,
            trace: None,
            addflag: [],
            last: None,
            tolowername: None,
            replaceinname: None,
            warning: None,
            setsubrepo: None,
            maintenance: None,
            disposable: None,
            precious: None,
        },
        Rule {
            name: [
                "foo",
            ],
            namepat: None,
            ver: [],
            notver: [],
            verpat: Some(
                "[0-9]{2}\\.[0-9]{2}",
            ),
            wwwpart: [],
            sourceforge: [],
            summpart: [],
            wwwpat: None,
            ruleset: [],
            noruleset: [],
            category: [],
            categorypat: None,
            maintainer: [],
            vercomps: None,
            verlonger: None,
            vergt: None,
            verge: None,
            verlt: None,
            verle: None,
            vereq: None,
            verne: None,
            relgt: None,
            relge: None,
            rellt: None,
            relle: None,
            releq: None,
            relne: None,
            flag: [],
            noflag: [],
            is_p_is_patch: None,
            hasbranch: None,
            setname: None,
            setver: None,
            addflavor: None,
            setflavor: None,
            resetflavors: None,
            setbranch: None,
            setbranchcomps: None,
            remove: None,
            ignore: None,
            devel: None,
            weak_devel: None,
            altver: None,
            altscheme: None,
            vulnerable: None,
            p_is_patch: None,
            any_is_patch: None,
            sink: None,
            outdated: None,
            legacy: None,
            nolegacy: None,
            incorrect: Some(
                true,
            ),
            untrusted: None,
            noscheme: None,
            rolling: None,
            snapshot: None,
            successor: None,
            debianism: None,
            generated: None,
            trace: None,
            addflag: [],
            last: None,
            tolowername: None,
            replaceinname: None,
            warning: None,
            setsubrepo: None,
            maintenance: None,
            disposable: None,
            precious: None,
        },
    ],
}
